--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.level.org.springframework.security=DEBUG
 
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
+
+# spring.flyway.clean=true
+# spring.flyway.baseline-on-migrate=true
