--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-stacktrace=never
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
