--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-stacktrace=never
 logging.level.org.springframework.security=DEBUG
-
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
-
+forohub.security.secret=clavesecreta123
 # spring.flyway.clean=true
 # spring.flyway.baseline-on-migrate=true
