--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ server.error.include-stacktrace=never
 logging.level.org.springframework.security=DEBUG
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
-forohub.security.secret=clavesecreta123
+forohub.security.secret=${JWT_SECRET_FOROHUB:clavesecreta123}
 # spring.flyway.clean=true
 # spring.flyway.baseline-on-migrate=true
