--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=forohub
-#server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub?createDatabaseIfNotExist=true
 spring.datasource.username=${DATASOURCE_USERNAME}
@@ -17,5 +16,16 @@ logging.level.org.springframework.security=DEBUG
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 forohub.security.secret=${JWT_SECRET_FOROHUB:clavesecreta123}
-# spring.flyway.clean=true
+
 # spring.flyway.baseline-on-migrate=true
+
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.api.url=https://api.openai.com/v1/chat/completions
+spring.ai.openai.api.model=gpt-4o-mini
+spring.ai.openai.api.temperature=0.4
+spring.ai.openai.api.max-tokens=100
+spring.ai.retry.max-attempts=20
+spring.ai.retry.backoff.initial-interval=10
+spring.ai.retry.backoff.multiplier=6
+spring.ai.retry.backoff.max-interval=300
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
