--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.2</version>
 		</dependency>
+		<!-- Dependencia para Swagger/OpenAPI (SpringDoc): -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 		<!-- Simple OpenAI de Estela Sashir: -->
 		<dependency>
 			<groupId>io.github.sashirestela</groupId>
