--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=forohub
 spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub?createDatabaseIfNotExist=true
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+forohub.security.secret=${JWT_SECRET_FOROHUB:clavesecreta123}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -15,7 +17,6 @@ server.error.include-stacktrace=never
 logging.level.org.springframework.security=DEBUG
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
-forohub.security.secret=${JWT_SECRET_FOROHUB:clavesecreta123}
 
 # spring.flyway.baseline-on-migrate=true
 
@@ -29,3 +30,9 @@ spring.ai.retry.backoff.initial-interval=10
 spring.ai.retry.backoff.multiplier=6
 spring.ai.retry.backoff.max-interval=300
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
+
+# swagger-ui custom path:
+springdoc.swagger-ui.path=/swagger-ui.html
+
+#Disable Whitelabel Error Page:
+server.error.whitelabel.enabled = false
