--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.api.url=https://api.openai.com/v1/chat/completions
 spring.ai.openai.api.model=gpt-4o-mini
+spring.ai.openai.model=text-davinci-003
 spring.ai.openai.api.temperature=0.4
 spring.ai.openai.api.max-tokens=100
 spring.ai.retry.max-attempts=20
