--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-spring-boot-testcontainers</artifactId>
 		</dependency>
+		<!-- Spring Beans: -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>6.2.1</version>
+		</dependency>
 	</dependencies>
 	<!-- SpringAI BOM: -->
 	<dependencyManagement>
