--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=forohub
 
-spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub_new?createDatabaseIfNotExist=true
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 forohub.security.secret=${JWT_SECRET_FOROHUB:clavesecreta123}
