Agregar comentarios a application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,19 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.springframework=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.springframework=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-stacktrace=never
 logging.level.org.springframework.security=DEBUG
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 
 # spring.flyway.baseline-on-migrate=true
+# spring.flyway.baseline-version=0
+# spring.flyway.baseline-description=Baseline for existing database
 
+# Integration with OpenAI:
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.api.url=https://api.openai.com/v1/chat/completions
 spring.ai.openai.api.model=gpt-4o-mini
@@ -35,5 +38,5 @@ logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 # swagger-ui custom path:
 springdoc.swagger-ui.path=/swagger-ui.html
 
-#Disable Whitelabel Error Page:
+# Disable Whitelabel Error Page:
 server.error.whitelabel.enabled = false
