Agregar application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=forohub
 
-spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub_new?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub?createDatabaseIfNotExist=true
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 forohub.security.secret=${JWT_SECRET_FOROHUB:clavesecreta123}
@@ -10,17 +10,20 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.springframework=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.springframework=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-stacktrace=never
 logging.level.org.springframework.security=DEBUG
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 
-#spring.flyway.baseline-on-migrate=true
-#spring.flyway.ignore-failed-migrations=true
+# spring.flyway.baseline-on-migrate=true
+# spring.flyway.baseline-version=0
+# spring.flyway.baseline-description=Baseline for existing database
+# spring.flyway.on.migrate.ignore-missing-migrations=true
 
+# Integration with OpenAI:
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.api.url=https://api.openai.com/v1/chat/completions
 spring.ai.openai.api.model=gpt-4o-mini
@@ -36,5 +39,5 @@ logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 # swagger-ui custom path:
 springdoc.swagger-ui.path=/swagger-ui.html
 
-#Disable Whitelabel Error Page:
+# Disable Whitelabel Error Page:
 server.error.whitelabel.enabled = false
