--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.datasource.hikari.maximum-pool-size=10
 # spring.flyway.baseline-on-migrate=true
 # spring.flyway.baseline-version=0
 # spring.flyway.baseline-description=Baseline for existing database
+# spring.flyway.on.migrate.ignore-missing-migrations=true
 
 # Integration with OpenAI:
 spring.ai.openai.api-key=${OPENAI_API_KEY}
